samples/_failures_safe/1761040356_a8a6ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9df4da1.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_a9df4da1.c:170:14: error: ‘TOKEN_OPER’ undeclared (first use in this function)
  170 |         case TOKEN_OPER
      |              ^~~~~~~~~~
./samples/SAFE/__tmp_a9df4da1.c:170:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a9df4da1.c:170:9: error: expected ‘:’ or ‘...’ at end of input
  170 |         case TOKEN_OPER
      |         ^~~~
./samples/SAFE/__tmp_a9df4da1.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9df4da1.c:170:9: error: expected declaration or statement at end of input
